--- a/index.html
+++ b/index.html
@@ -3,33 +3,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Miciogatto Impara con Te!</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <title>Miciogatto Suma per Bambini</title>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    🎓 Impara con Miciogatto! 🐱
-  </header>
+  <header>🎓 Impara le somme con Miciogatto! 🐱</header>
 
   <div class="character">
     <img src="https://i.imgur.com/zlJsbGf.png" alt="Miciogatto il maestro" />
   </div>
 
   <div class="speech" id="speech">
-    Ciao! Io sono <strong>Miciogatto</strong>! Sei pronto per imparare giocando? 🧠🎲
+    Scegli un livello di somma:
   </div>
 
-  <div class="levels">
-    <div class="level" onclick="startSum()">+ Somma</div>
-    <!-- Puedes añadir más niveles aquí -->
+  <div class="levels" id="levels-container">
+    <div class="level" onclick="startLevel(1)">➕ Somma con 1</div>
+    <div class="level" onclick="startLevel(2)">➕ Somma con 2</div>
+    <div class="level" onclick="startLevel(3)">➕ Somma con 3</div>
+    <div class="level" onclick="startLevel(4)">➕ Somma con 4</div>
+    <div class="level" onclick="startLevel(5)">➕ Somma con 5</div>
+    <div class="level" onclick="startLevel(6)">➕ Somma con 6</div>
+    <div class="level" onclick="startLevel(7)">➕ Somma con 7</div>
+    <div class="level" onclick="startLevel(8)">➕ Somma con 8</div>
+    <div class="level" onclick="startLevel(9)">➕ Somma con 9</div>
   </div>
 
-  <!-- Área de suma interactiva -->
-  <div id="sum-area" style="text-align: center; display: none;">
-    <p id="question" style="font-size: 2em;"></p>
-    <input type="number" id="answer" placeholder="Scrivi la risposta" />
-    <button onclick="checkAnswer()">Rispondi</button>
+  <div id="game-area" style="display: none; text-align: center;">
+    <p id="question" class="question-text"></p>
+    <div class="number-grid" id="number-grid"></div>
+    <p id="feedback"></p>
   </div>
 
   <script src="script.js"></script>
