--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>🎓 Impara le somme con Miciogatto! 🐱</header>
 
   <div class="character">
-    <img src="https://i.imgur.com/zlJsbGf.png" alt="Miciogatto il maestro" />
+    <img src="https://www.flaticon.es/stickers-gratis/matematica" alt="Miciogatto il maestro" />
   </div>
 
   <div class="speech" id="speech">
