--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>🎉 Impara con Miciogatto! 🐱</header>
+  <header>🎓 Miciogatto Impara le Somme! 🐱</header>
 
   <div class="character">
     <img src="https://i.imgur.com/zlJsbGf.png" alt="Miciogatto" />
@@ -17,7 +17,6 @@
   <div class="speech" id="speech">Scegli un livello!</div>
 
   <div class="levels" id="levels-container">
-    <!-- Niveles 1 al 9 -->
     <div class="level" onclick="startLevel(1)">1 ➕</div>
     <div class="level" onclick="startLevel(2)">2 ➕</div>
     <div class="level" onclick="startLevel(3)">3 ➕</div>
@@ -32,7 +31,7 @@
   <div id="game-area" style="display: none; text-align: center;">
     <p id="question" class="question-text animate-pop"></p>
     <div class="number-grid" id="number-grid"></div>
-    <p id="feedback"></p>
+    <p id="feedback" class="feedback"></p>
   </div>
 
   <script src="script.js"></script>
