--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>🎓 Miciogatto Impara le Somme! 🐱</header>
 
   <div class="character">
-    <img src="https://i.imgur.com/zlJsbGf.png" alt="Miciogatto" />
+    <img src="gato.png" alt="Miciogatto" />
   </div>
 
   <div class="speech" id="speech">Scegli un livello!</div>
